--- a/ps101/src/main/res/layout/activity_ntp_sever_setting.xml
+++ b/ps101/src/main/res/layout/activity_ntp_sever_setting.xml
@@ -89,6 +89,7 @@
             android:hint="0-64 Characters"
             android:lines="1"
             android:paddingStart="5dp"
+            android:maxLength="64"
             android:textColor="@color/black_333333"
             android:textColorHint="@color/grey_ebebeb"
             android:textSize="15sp"
