--- a/ps101/src/main/res/layout/activity_about_ps101.xml
+++ b/ps101/src/main/res/layout/activity_about_ps101.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:src="@drawable/ic_logo" />
+        android:src="@drawable/ps101_ic_logo" />
 
     <TextView
         android:id="@+id/app_name"
