--- a/ps101/src/main/res/layout/activity_auxiliary_operation.xml
+++ b/ps101/src/main/res/layout/activity_auxiliary_operation.xml
@@ -107,5 +107,18 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold" />
+
+        <View style="@style/divider_line" />
+
+        <TextView
+            android:id="@+id/tvBleGateway"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableRight="@drawable/ic_arrow_right"
+            android:gravity="center_vertical"
+            android:text="Bluetooth Gateway"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
